--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 </head>
 
 <body>
-<p>This site is used as a <a href="https://en.wikipedia.org/wiki/Content_delivery_network">Content Delivery Network</a> for 
-<a href="https://github.com/uBlockOrigin/uAssets/tree/master/filters">uBlock Origin's own filter lists</a>:
+<p>This branch is to be used as reference content for <a href="https://en.wikipedia.org/wiki/Content_delivery_network">Content Delivery 
+Networks</a> 
+hosting <a href="https://github.com/uBlockOrigin/uAssets/tree/master/filters">uBlock Origin's own filter lists</a>:</p>
 <ul>
-<li><a href="./filters/filters.txt">uBlock filters</a> (default)
-<li><a href="./filters/badware.txt">uBlock filters – Badware risks</a> (default)
-<li><a href="./filters/annoyances.txt">uBlock filters – Privacy</a> (default)
-<li><a href="./filters/quick-fixes.txt">uBlock filters – Quick fixes</a> (default)
-<li><a href="./filters/resource-abuse.txt">uBlock filters – Resource abuse</a> (default)
-<li><a href="./filters/unbreak.txt">uBlock filters – Unbreak</a> (default)
-<li><a href="./filters/badlists.txt">Bad filter lists</a> (default, internal)
-<li><a href="./filters/lan-block.txt">Block Outsider Intrusion into LAN</a> (optional)
-<li><a href="./filters/annoyances.txt">uBlock filters – Annoyances</a> (optional)
-</ul>
-</body>
+<li><a href="./ublock/assets.json">uBlock's <code>assets.json</code></a> (internal)</li>
+<li><a href="./ublock/assets.dev.json">uBlock's <code>assets.dev.json</code></a> (internal)</li>
+<li><a href="./filters/badlists.txt">Bad filter lists</a> (internal)</li>
+<li>uBlock filter lists
+<ul>
+<li><a href="./filters/filters.min.txt">uBlock filters – Ads</a> (default)</li>
+<li><a href="./filters/privacy.min.txt">uBlock filters – Privacy</a> (default)</li>
+<li><a href="./filters/badware.txt">uBlock filters – Badware risks</a> (default)</li>
+<li><a href="./filters/quick-fixes.txt">uBlock filters – Quick fixes</a> (default)</li>
+<li><a href="./filters/unbreak.txt">uBlock filters – Unbreak</a> (default)</li>
+<li><a href="./filters/annoyances.txt">uBlock filters – Annoyances</a></li>
+<li><a href="./filters/lan-block.txt">Block Outsider Intrusion into LAN</a></li></ul>
+</li>
+<li>EasyList filter lists
+<ul>
+<li><a href="./thirdparties/easylist.txt">EasyList – Ads</a> (default)</li>
+<li><a href="./thirdparties/easyprivacy.txt">EasyPrivacy</a> (default)</li>
+<li>EasyList – Annoyances</li>
+<li><a href="./thirdparties/easylist-annoyances.txt">EasyList – Annoyances</a></li>
+<li><a href="./thirdparties/easylist-cookies.txt">EasyList – Cookie Notices</a></li>
+<li><a href="./thirdparties/easylist-social.txt">EasyList – Social Widgets</a></li></ul>
+<li><a href="./thirdparties/easylist-notifications.txt">EasyList – Notifications</a></li></ul>
+<li><a href="./thirdparties/easylist-newsletters.txt">EasyList – Newsletter Notices</a></li></ul>
+</li>
+</ul></body>
 </html>
